--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:h2:mem:testdb
+
+logging.level.root=WARN
+logging.level.tolan.me.projectmanagement=DEBUG
+logging.level.org.springframework=INFO
+logging.file.name=app.log
